Expose result PACT metadata
